--- a/src/main/resources/templates/group/groupDetailsChat.html
+++ b/src/main/resources/templates/group/groupDetailsChat.html
@@ -33,6 +33,7 @@
     <div class="row">
         <div>
             <ul class="nav nav-pills nav-justified">
+                <h3 class="pr-5 mb-0 mr-5" th:text="${groupName}"></h3>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/group/details/__${groupId}__/members}">Uczestnicy</a>
                 </li>
